<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="step_by_step_title">Directions</string>
    <string name="step_by_step_header_from">From</string>
    <string name="step_by_step_header_to">To</string>
    <string name="step_by_step_header_departure">Dep.</string>
    <string name="step_by_step_header_arrival">Arr.</string>
    <string name="step_by_step_turn">Turn</string>
    <string name="step_by_step_heading">heading</string>
    <string name="step_by_step_from">from</string>
    <string name="step_by_step_to">to</string>
    <string name="step_by_step_connector_street_name">on</string>
    <string name="step_by_step_transit_get_on">Get on</string>
    <string name="step_by_step_transit_get_off">Get off</string>
    <string name="step_by_step_transit_connector_stop_name">At</string>
    <string name="step_by_step_transit_stops_in_between">Stops in between</string>
    <string name="need_to_place_marker">"Add a position marker..."</string>
    <string name="need_to_place_markers_before_planning">"You need to set origin and destination first"</string>
    <string name="start_location_hint">Start location</string>
    <string name="end_location_hint">End location</string>
    <string name="textbox_close_to_marker">Marker, close to</string>
    <string name="metadata_request_successful">Metadata downloaded correctly</string>
    <string name="metadata_request_progress">Getting graph metadata. Please wait...</string>
    <string name="geocoding_request_progress">Processing geocoding. Please wait...</string>
    <string name="server_checker_progress">Getting server info. Please wait...</string>
    <string name="server_checker_successful">OK: Server is working</string>
    <string name="server_checker_error_message">Unable to reach server:</string>
    <string name="server_checker_info_dialog_title">OpenTripPlanner Server Info</string>
    <string name="server_checker_info_dialog_region">Region:</string>
    <string name="server_checker_info_dialog_language">Language:</string>
    <string name="server_checker_info_dialog_contact">Contact:</string>
    <string name="server_checker_info_dialog_url">URL:</string>
    <string name="server_checker_info_dialog_bounds">Bounds:</string>
    <string name="server_checker_info_dialog_reachable">Currently reachable:</string>
    <string name="server_selector_progress">Detecting optimal server. Please wait...</string>
    <string name="server_selector_detected">Detected</string>
    <string name="server_selector_server_change_info">Change this manually in Settings</string>
    <string name="server_selector_server_info_dialog_title">Choose OpenTripPlanner Server</string>
    <string name="server_selector_custom_server_alert_title">Enter a custom OTP server domain</string>
    <string name="custom_server_name">Custom server</string>
    <string name="custom_server_not_set">"Custom server not set: incorrect URL"</string>
    <string name="custom_server_unknown_region">Unknown</string>
    <string name="custom_server_unknown_bounds">Unknown</string>
    <string name="custom_server_unknown_language">Unknown</string>
    <string name="custom_server_unknown_name">Unknown </string>
    <string name="custom_server_unknown_email">unknown email</string>
    <string name="choose_location_type_start">Choose start location</string>
    <string name="choose_location_type_end">Choose end location</string>
    <string name="location_type_current_location">Current location</string>
    <string name="location_type_contact">Contact address</string>
    <string name="location_type_map_point">Point on map</string>
    <string name="mode_transit">Transit</string>
    <string name="mode_car">Car</string>
    <string name="mode_car_action">Drive</string>
    <string name="mode_bus">Bus only</string>
    <string name="mode_train">Train only</string>
    <string name="mode_walk">Walk only</string>
    <string name="mode_walk_action">Walk</string>
    <string name="mode_bicycle">Bicycle</string>
    <string name="mode_bicycle_action">Bike</string>
    <string name="mode_transit_bicycle">Transit and bicycle</string>
    <string name="optimization_quick">Quickest</string>
    <string name="optimization_safe">Safest</string>
    <string name="optimization_fewest_transfers">Fewest transfers</string>
    <string name="optimization_bike_triangle">Custom trip...</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="disable_gps">Disable GPS</string>
    <string name="no_gps_signal">Sorry, no GPS signal detected</string>
    <string name="my_location">My location</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_send_email">Send message</string>
    <string name="feedback_subject">Report to OTP Android developer</string>
    <string name="server_info">Server info</string>
    <string name="start_marker_title">Route start</string>
    <string name="start_marker_activated">Start location</string>
    <string name="start_marker_description">Long press to drag...</string>
    <string name="end_marker_title">Route end</string>
    <string name="end_marker_activated">End location</string>
    <string name="end_marker_description">Long press to drag...</string>
    <string name="marker_out_of_boundaries">Location outside of network boundaries. Marker not set.</string>
    <string name="markers_dialog_title">Choose point type</string>
    <string name="choose_geocoder">Select address</string>
    <string name="wheelchair_accessible">Wheelchair accessible</string>
    <string name="wheelchair_accessibility_description">Request wheelchair accessible routes</string>
    <string name="maximum_walk">Maximum walk distance</string>
    <string name="maximum_walk_description">meters</string>
    <string name="routing_options">Routing options</string>
    <string name="map_options">Map options</string>
    <string name="map_tile_provider">Map tile provider</string>
    <string name="custom_server_url">Custom server URL</string>
    <string name="custom_server_url_description">"URL set to a working OTP server"</string>
    <string name="custom_server_url_error">"URL is not valid"</string>
    <string name="custom_server_error">"Please provide a new URL for a working OTP server"</string>
    <string name="auto_detect_server">Auto detect OTP Server</string>
    <string name="auto_detect_server_description">Automatically selects an OpenTripPlanner server based on current location</string>
    <string name="geocoder_results_title">Geocoder Results</string>
    <string name="geocoder_no_results_message">Sorry, a geographical location for this address could not be found.</string>
    <string name="tripplanner_progress">"Generating trip. Please wait..."</string>
    <string name="tripplanner_results_title">Routing Results</string>
    <string name="tripplanner_error_dialog_title">Planning not possible</string>
    <string name="tripplanner_error_request_timeout">Server is not responding, please try again later</string>
	<string name="tripplanner_error_system">Server is not working, please try again later</string>
	<string name="tripplanner_error_outside_bounds">Origin or destination are outside server limits</string>
	<string name="tripplanner_error_path_not_found">"There aren't any routes matching criteria between origin and destination"</string>
	<string name="tripplanner_error_no_transit_times">Transit times for selected date are not defined in the server</string>
	<string name="tripplanner_error_bogus_parameter">Incorrect request, please try again with different parameters</string>
	<string name="tripplanner_error_geocode_from_not_found">Origin not found</string>
	<string name="tripplanner_error_geocode_to_not_found">Destination not found</string>
	<string name="tripplanner_error_geocode_from_to_not_found">Origin and destination not found</string>
	<string name="tripplanner_error_too_close">Trip is too short</string>
	<string name="tripplanner_error_location_not_accessible">Chosen location is not accessible</string>
	<string name="tripplanner_error_geocode_from_ambiguous">Origin is ambiguous</string>
	<string name="tripplanner_error_geocode_to_ambiguous">Destination  is ambiguous</string>
	<string name="tripplanner_error_geocode_from_to_ambiguous">Origin and destination are ambiguous</string>
	<string name="tripplanner_error_triangle">Incorrect bike parameters, please try again with different values</string>
    <string name="date_time_title">Set date and time</string>
    <string name="date_time_spinner_arrive">Arrive at:</string>
    <string name="date_time_spinner_depart">Depart at:</string>
    <string name="next_day">tomorrow</string>
    <string name="short_hours">h</string>
    <string name="short_minutes">m</string>
    <string name="short_seconds">s</string>
    <string name="long_hours">h</string>
    <string name="long_minutes">min</string>
    <string name="long_seconds">sec</string>
    <string name="full_hours">hours</string>
    <string name="full_minutes">minutes</string>
    <string name="full_seconds">seconds</string>
    <string name="connector_stop">from</string>
    <string name="connector_time">at</string>
    <string name="connector_full_date">on</string>
    <string name="connector_headsign">dir.</string>
    <string name="connector_destination">to</string>
    <string name="before_route">Route</string>
    <string name="walking_duration">walking</string>
    <string name="total_duration">takes</string>
    <string name="before_distance_bike">Ride</string>
    <string name="before_distance_walk">Walk</string>
    <string name="distance_unit">m</string>
    <string name="connector_time_full">takes</string>
    <string name="refresh_server_list">Refresh server list</string>
    <string name="server_list_donwload_date_description">Server List Downloaded on</string>
    <string name="server_list_donwload_date_unknown">Last Server List Download Unknown</string>
    <string name="alternative_routes">Select a route</string>
    <string name="geocoder_preference_provider_title">Geocoder Provider</string>
    <string name="geocoder_preference_provider_nominatim">Mapquest Nominatim</string>
    <string name="geocoder_preference_provider_google_places">Google Places</string>
    <string name="use_android_geocoder_title">Android Geocoder</string>
    <string name="use_android_geocoder_description">Query first with Android Geocoder</string>
    <string name="use_intelligent_markers_title">Intelligent markers</string>
    <string name="use_intelligent_markers_description">Move markers to a close geographical location</string>
    <string name="info_server_no_server_selected">No server selected</string>
    <string name="info_server_error">Attention: Cannot obtain server info!</string>
    <string name="selected_custom_server_title">Custom OTP Server</string>
    <string name="selected_custom_server_description">Select server provided by custom URL</string>
    <string name="server_down">Attention: Server not reachable!</string>
    <string name="origin_destination_are_mylocation">"Can not plan: origin and destination are the same"</string>
    <string name="play_services_error_title">Play Services error</string>
    <string name="play_services_error">Can not contact Google servers: the app may work incorrectly</string>
    <string name="location_error">Can not retrieve actual location</string>
    <string name="header_optimization">Trip type</string>
    <string name="header_travel_mode">Travel mode</string>
    <string name="header_bike_options">Bike options</string>
    <string name="header_bike_options_quick">Quick</string>
    <string name="header_bike_options_flat">Flat</string>
    <string name="header_bike_options_bike_friendly">Bike friendly</string>
   	<string name="dir_relative_circle_clockwise">circle clockwise</string>
	<string name="dir_relative_circle_counterclockwise">circle counterclockwise</string>
</resources>